# aimemo

./: .windsurfrules  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/: settings.json
.cursor/rules/: aimemo.mdc  memo.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
Formula/: aimemo.rb  memo.rb
aimemo/: Cargo.toml
aimemo/src/: hooks.rs  main.rs  store.rs
aimemo/tests/: integration.rs
docs/agents/: claude-code.md  copilot.md  cursor.md  windsurf.md
memo-cli/: Cargo.toml
memo-cli/src/: main.rs
memo-hooks/: Cargo.toml
memo-hooks/src/: lib.rs
scripts/: update-formula.sh
