[package]
name = "memo-hooks"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Agent integration hooks for memo, persistent memory for AI coding agents"

[dependencies]
memo-core = { path = "../memo-core", version = "0.1.5" }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
